# picoscript

./: .gitignore  LANGUAGE_SPEC.md  README.md  _commitmsg.txt  gen_complete_reference.py  gen_hooks_js.py  gen_language_docs.py  gen_methods.py  gen_playground.py  gen_raw.py  gen_ref.py  gen_ref_fixed.py  gen_ref_v2.py  gen_showcase.py  gen_site.py  hook_contracts.py  native_build.py  package.json  pico_module.py  picobrotli.py  picocapsule.py  picocompress.py  picolayout.py  picoscript.py  picoscript_ast.py  picoscript_basic.py  picoscript_build.py  picoscript_cfront.py  picoscript_cobol.py  picoscript_english.py  picoscript_functional.py  picoscript_il.py  picoscript_lang.py  picoscript_lang_v2.py  picoscript_metrics.py  picoscript_opcodes.py  picoscript_python.py  picoscript_report.py  picoscript_reportmodel.py  picoscript_runtime.py  (+7 more)
data/: README.md  picoscript.chat.sample.jsonl  picoscript.sample.jsonl
docs/: AGENT_PROMPT.md  COMPILER_ARCHITECTURE.md  COMPRESS.md  CONFORMANCE_LEVELS.md  DIALECT_PARITY.md  EVENTING.md  EVENTS.md  EXCEPTION_ENGINE.md  FEATURE_MATRIX.md  HOOK_REFERENCE.md  INTERNALS.md  INV25_PIOS_TRACE.md  INVARIANTS.md  LANGUAGE_DOCS.html  LOGGING.md  MAP.md  METHOD_REFERENCE.html  METHOD_REFERENCE.md  NAMED_CONSTANTS.md  NAMESPACE_STATUS.md  NATIVE_HTTP_SERVER.md  PICOFORGE_SPEC.md  PICOSCRIPT_NATIVE_SERVER.md  PICOSCRIPT_REFERENCE.html  PICOSCRIPT_THREAD_POOL.md  PICOSCRIPT_UNIFIED_RUNTIME.md  PICO_UI.md  PIOS_CAPSULE_HANDOFF.md  PIOS_DEVICE_BINDINGS.md  PIOS_HOST_BINDINGS.md  PIOS_IO_BINDING.md  PIOS_IO_INTEGRATION.md  PLATFORM.md  PRIMITIVES.md  PSUNIT.md  ROADMAP.md  SELF_HOSTING.md  STRING_TEMPLATES.md  SYSTEMS_LANGUAGE.md  TUTORIAL.md  (+7 more)
examples/: README.md  bitnet_int8_matvec.pc  bitnet_k_matvec.pc  bitnet_ternary_matvec.pc  constants_enums.eng  constants_enums.pbas  constants_enums.pc  constants_enums.ppy  encoding_roundtrip.pc  filter.pico  fizzbuzz.pbas  hashing.pc  hello.pico  locale_formatting.pc  model_block_slice.pc  selfhost_asm.pc  selfhost_emit.pc  sum.ast  sum.eng  sum.pc  text_tools.pc  web_template.pc
samples/: FINDINGS.md  (+1 more)
(+264 files in other folders)
